--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "migrate": "npx knex migrate:latest",
-    "prestart": "npm run migrate",
     "start": "node index",
     "dev": "nodemon index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prestart": "npx knex migrate:latest"
   },
   "keywords": [],
   "author": "",
