--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
     "knex": "^2.4.2",
+    "mysql2": "^3.3.1",
     "openai": "^3.2.1",
-    "pg": "^8.11.0",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
