--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
     "knex": "^2.4.2",
-    "mysql2": "^3.3.1",
+    "mysql": "^2.18.1",
     "openai": "^3.2.1",
     "sqlite3": "^5.1.6"
   },
